# pivoting_ball

./: CMakeLists.txt  pivoting_ball_0.cpp  pivoting_ball_0.h  pivoting_ball_1.cpp  pivoting_ball_1.h  pivoting_ball_2.cpp  pivoting_ball_2.h  pivoting_ball_naive0.cpp  pivoting_ball_naive0.h  pivoting_ball_naive1.cpp  pivoting_ball_naive1.h  viewer.cpp
data/: grid.plo
